--- a/GP/app/src/main/res/layout/dmdisplay.xml
+++ b/GP/app/src/main/res/layout/dmdisplay.xml
@@ -13,8 +13,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.369" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/button_dmd"
@@ -36,7 +35,7 @@
         android:textCursorDrawable="@drawable/cursor"
         android:theme="@style/MyEditText"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.549"
+        app:layout_constraintHorizontal_bias="0.636"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -44,8 +43,8 @@
         android:id="@+id/bt_rmssd"
         android:layout_width="83dp"
         android:layout_height="47dp"
-        android:layout_marginStart="28dp"
-        android:layout_marginLeft="28dp"
+        android:layout_marginStart="52dp"
+        android:layout_marginLeft="52dp"
         android:layout_marginTop="100dp"
         android:text="@string/transfer"
         android:textColor="#ffffff"
@@ -53,12 +52,12 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageButton
-        android:id="@+id/btn"
+        android:id="@+id/btn_bubble"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_marginTop="108dp"
-        android:layout_marginEnd="80dp"
-        android:layout_marginRight="80dp"
+        android:layout_marginEnd="60dp"
+        android:layout_marginRight="60dp"
         android:background="@mipmap/p1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
